--- a/Haraj_app/Base.lproj/Main.storyboard
+++ b/Haraj_app/Base.lproj/Main.storyboard
@@ -617,7 +617,7 @@
                                         <color key="textColor" red="0.0" green="0.56470588239999997" blue="0.18823529410000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="66357550-1898-417A-9518-D6A54D58B603" translatesAutoresizingMaskIntoConstraints="NO" id="7sL-5T-AGh">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="C430DA53-B211-4A33-BA50-BD3512ACC9F0" translatesAutoresizingMaskIntoConstraints="NO" id="7sL-5T-AGh">
                                         <frame key="frameInset" minX="322" minY="20" width="40" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
@@ -658,7 +658,7 @@
             <objects>
                 <navigationController storyboardIdentifier="HomeNavigationController" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="3Yh-ps-osH" customClass="HomeNavigationController" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="45N-9l-Y3Z">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="45N-9l-Y3Z">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -1072,7 +1072,7 @@
             <objects>
                 <navigationController storyboardIdentifier="MainNavigationController" automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="EIm-hX-R5N" customClass="MainNavigationController" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="QqY-iC-hys">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QqY-iC-hys">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1879,14 +1879,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="VaU-8C-RXm" firstAttribute="top" secondItem="DEp-xH-iey" secondAttribute="bottom" id="1VJ-uc-GXh"/>
-                            <constraint firstItem="DEp-xH-iey" firstAttribute="leading" secondItem="c94-Bs-Jfm" secondAttribute="leading" id="3lC-dj-dkr"/>
-                            <constraint firstItem="VaU-8C-RXm" firstAttribute="top" secondItem="DEp-xH-iey" secondAttribute="bottom" id="8JI-Hw-7nb"/>
-                            <constraint firstAttribute="trailing" secondItem="DEp-xH-iey" secondAttribute="trailing" id="Cnb-pF-Q29"/>
-                            <constraint firstItem="DEp-xH-iey" firstAttribute="top" secondItem="c94-Bs-Jfm" secondAttribute="top" id="Ol1-S1-DSf"/>
-                            <constraint firstItem="DEp-xH-iey" firstAttribute="top" secondItem="c94-Bs-Jfm" secondAttribute="top" id="d1r-wC-MLn"/>
-                            <constraint firstItem="DEp-xH-iey" firstAttribute="leading" secondItem="c94-Bs-Jfm" secondAttribute="leading" id="jEd-sA-T9j"/>
-                            <constraint firstAttribute="trailing" secondItem="DEp-xH-iey" secondAttribute="trailing" id="ren-Mh-HJz"/>
+                            <constraint firstItem="VaU-8C-RXm" firstAttribute="top" secondItem="DEp-xH-iey" secondAttribute="bottom" id="1I3-5L-aZt"/>
+                            <constraint firstItem="DEp-xH-iey" firstAttribute="top" secondItem="5rd-qj-e6l" secondAttribute="bottom" id="ECm-I1-xVt"/>
+                            <constraint firstAttribute="trailing" secondItem="DEp-xH-iey" secondAttribute="trailing" id="OCR-jy-Qu9"/>
+                            <constraint firstItem="DEp-xH-iey" firstAttribute="leading" secondItem="c94-Bs-Jfm" secondAttribute="leading" id="bTE-pr-dVQ"/>
                         </constraints>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
@@ -3598,6 +3594,11 @@
                                     <action selector="SearchButton_Action:" destination="N7Q-vk-sqM" eventType="touchUpInside" id="rCU-qa-XoB"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tsK-Wn-0ig">
+                                <frame key="frameInset" minX="15" minY="90" width="346" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="jIn-sz-Xae">
                                 <frame key="frameInset" minX="16" minY="91" width="343" height="29"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -4126,7 +4127,10 @@
         <image name="10154143609282724.jpg" width="28" height="60"/>
         <image name="3Stars" width="126" height="57"/>
         <image name="3dots" width="12" height="59"/>
-        <image name="66357550-1898-417A-9518-D6A54D58B603" width="45" height="44">
+        <image name="Activity" width="50" height="49"/>
+        <image name="Boost" width="80" height="48"/>
+        <image name="Boostgrey" width="90" height="53"/>
+        <image name="C430DA53-B211-4A33-BA50-BD3512ACC9F0" width="45" height="44">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGPT5YJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK4HCBMU
 GR4fIyQrLjE3OlUkbnVsbNUJCgsMDQ4PEBESVk5TU2l6ZVYkY2xhc3NcTlNJbWFnZUZsYWdzVk5TUmVw
@@ -4309,9 +4313,6 @@ AMIA2QDbAN0obyh0KH8oiCibKJ8oqiizKLgowCjDKMgo1yjbKOIo6ij3KPwo/ikAKQUpDSkQKRUpHSkg
 KTIpNSk6AAAAAAAAAgEAAAAAAAAAQQAAAAAAAAAAAAAAAAAAKTw
 </mutableData>
         </image>
-        <image name="Activity" width="50" height="49"/>
-        <image name="Boost" width="80" height="48"/>
-        <image name="Boostgrey" width="90" height="53"/>
         <image name="Calc" width="70" height="91"/>
         <image name="Callsgrey" width="28" height="31"/>
         <image name="Claim" width="40" height="40"/>
