--- a/Haraj_app/ProductDetailCellCar.xib
+++ b/Haraj_app/ProductDetailCellCar.xib
@@ -25,10 +25,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CellCar" rowHeight="338" id="KGk-i7-Jjw" customClass="ProductDetailCellCar">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="334"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="378"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="375" height="333"/>
+                <frame key="frameInset" width="375" height="377"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Jeddah" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NlE-al-r0x">
@@ -63,7 +63,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="What are you selling?" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="XMF-IP-jIr">
-                        <frame key="frameInset" minX="8" minY="62" width="359" height="114"/>
+                        <frame key="frameInset" minX="8" minY="106" width="359" height="114"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" name="SanFranciscoDisplay-Semibold" family="San Francisco Display" pointSize="29"/>
@@ -73,7 +73,7 @@
                         </connections>
                     </textView>
                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" text="Add some #Hashtags" textAlignment="right" translatesAutoresizingMaskIntoConstraints="NO" id="NU4-qQ-pwT">
-                        <frame key="frameInset" minX="8" minY="178" width="359" height="57"/>
+                        <frame key="frameInset" minX="8" minY="222" width="359" height="57"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <fontDescription key="fontDescription" name="SanFranciscoDisplay-Medium" family="San Francisco Display" pointSize="23"/>
@@ -83,7 +83,7 @@
                         </connections>
                     </textView>
                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gEC-iw-WEp">
-                        <frame key="frameInset" minY="243" width="375" height="90"/>
+                        <frame key="frameInset" minY="287" width="375" height="90"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="65I-s6-hyC">
@@ -132,9 +132,41 @@
                         </subviews>
                         <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2UO-X6-rPt">
+                        <frame key="frameInset" minY="58" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DownArrow" translatesAutoresizingMaskIntoConstraints="NO" id="b5S-SZ-Bfk">
+                                <frame key="frameInset" minX="323" minY="12" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Choose Car Make?" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6N1-vl-H9I">
+                                <frame key="frameInset" minX="77" minY="7" width="238" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" name="SanFranciscoDisplay-Medium" family="San Francisco Display" pointSize="18"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="_placeholderLabel.textColor">
+                                        <color key="value" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="delegate" destination="-1" id="DlW-bQ-uwb"/>
+                                </connections>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Peugeot.png" translatesAutoresizingMaskIntoConstraints="NO" id="emk-VJ-XjD">
+                                <frame key="frameInset" width="44" height="44"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.92941176470588238" green="0.92941176470588238" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
                 </subviews>
             </tableViewCellContentView>
             <connections>
+                <outlet property="carMakeImageView" destination="emk-VJ-XjD" id="1ne-Fd-YjA"/>
+                <outlet property="carMakeTextField" destination="6N1-vl-H9I" id="jlp-Wf-CDr"/>
                 <outlet property="hashTextView" destination="NU4-qQ-pwT" id="oKz-2Y-xAk"/>
                 <outlet property="locationChangeButton" destination="hhq-Qr-psi" id="Bbg-4n-aI9"/>
                 <outlet property="locationLabel" destination="NlE-al-r0x" id="p38-4U-h7u"/>
@@ -145,13 +177,15 @@
                 <outlet property="sellingTextview" destination="XMF-IP-jIr" id="lvH-Ex-mwR"/>
                 <outlet property="usernameLabel" destination="o0L-X2-ciW" id="ubb-GN-TCG"/>
             </connections>
-            <point key="canvasLocation" x="64.5" y="164"/>
+            <point key="canvasLocation" x="104.5" y="127"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="Location_on" width="19" height="26"/>
+        <image name="DownArrow" width="29" height="17"/>
+        <image name="Location_on" width="41" height="55"/>
         <image name="Mileage" width="59" height="36"/>
         <image name="Model" width="48" height="47"/>
+        <image name="Peugeot.png" width="124" height="124"/>
         <image name="defaultimg.jpg" width="200" height="200"/>
     </resources>
 </document>
