--- a/Haraj_app/ProductDetailCellCar.xib
+++ b/Haraj_app/ProductDetailCellCar.xib
@@ -54,7 +54,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" name="SanFranciscoDisplay-Light" family="San Francisco Display" pointSize="15"/>
                         <inset key="titleEdgeInsets" minX="2" minY="0.0" maxX="0.0" maxY="0.0"/>
-                        <state key="normal" title="Change">
+                        <state key="normal" title="Update">
                             <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         </state>
                     </button>
@@ -155,8 +155,8 @@
                                     <outlet property="delegate" destination="-1" id="DlW-bQ-uwb"/>
                                 </connections>
                             </textField>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Peugeot.png" translatesAutoresizingMaskIntoConstraints="NO" id="emk-VJ-XjD">
-                                <frame key="frameInset" width="44" height="44"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="emk-VJ-XjD">
+                                <frame key="frameInset" minX="8" width="44" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -185,7 +185,6 @@
         <image name="Location_on" width="41" height="55"/>
         <image name="Mileage" width="59" height="36"/>
         <image name="Model" width="48" height="47"/>
-        <image name="Peugeot.png" width="124" height="124"/>
         <image name="defaultimg.jpg" width="200" height="200"/>
     </resources>
 </document>
